--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "michelf/php-markdown": "^1.6",
-        "michelf/php-smartypants": "1.6.0-beta1"
+        "michelf/php-smartypants": "1.6.0-beta1",
+        "barryvdh/laravel-debugbar": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
