--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
   ],
   "dependencies": {
     "jquery": "^3.1.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "font-awesome": "fontawesome#^4.6.3",
+    "datatables": "^1.10.12",
+    "datatables-plugins": "^1.10.12"
   }
 }
