--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-9"
+  },
+  "dependencies": {
+    "gulp-rename": "^1.2.2"
   }
 }
