--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "fontawesome#^4.6.3",
     "datatables": "^1.10.12",
-    "datatables-plugins": "^1.10.12"
+    "datatables-plugins": "^1.10.12",
+    "selectize": "^0.12.1",
+    "pickadate": "^3.5.6"
   }
 }
